--- a/www/css/index.css
+++ b/www/css/index.css
@@ -191,18 +191,16 @@ button.camera-control:hover {
 .gb-menu-items{
   text-decoration: none;
   color: #2e2e2e;
-}
-.gb-menu-items div{
-  border: 1px solid #607d8b; 
-  --border: 1px solid red; 
+  background-color: #0ad681;
+  display: block;
   width: 100%; 
+  height: 75px; 
   text-align: center;
-  font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-  height: 150px; 
   font-size: 2em; 
-  padding-top: 15%;
-  padding-bottom: 15%; 
+  padding-top: 25px;
+  color: white;
   font-weight: 600;
+  font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
 }
 
 .gb-grocery-items-inner{
@@ -378,4 +376,44 @@ body {
   color: gray;
   padding: 50% 0px;
   text-align: center;
+}
+
+.start-ride-body{
+  background-color: black;
+}
+
+.group-cont{
+  background-color: #f5f5f5;
+  padding: 10px;
+  height: auto;
+  overflow: hidden;
+}
+.group-cont-finish{
+  margin-top: 25%;
+  padding-bottom: 50px;
+}
+
+.group-cont h3{
+  font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+  font-size: 20px;
+}
+
+.rider-frame{
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background-color: white;
+  float: left;
+  margin-right: 5px;
+}
+.rider-frame-big{
+  width: 100px;
+  height: 100px;
+}
+
+#join-button{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
