--- a/www/css/index.css
+++ b/www/css/index.css
@@ -45,6 +45,7 @@ body {
     width:100%;
     text-align: center; */
     background-color: white;
+    text-align: center;
 }
 
 @keyframes fade {
@@ -339,6 +340,13 @@ body {
   font-size: 14px;
   float: left;
   width: 50%;
+}
+
+.landing-brand{
+  position: relative;
+  margin: 5% auto;
+  height: 40%;
+  width: 40%;
 }
 
 .wrapper-list{
