--- a/www/css/index.css
+++ b/www/css/index.css
@@ -262,6 +262,35 @@ body {
   overflow: hidden; /* this is important to prevent the whole page to bounce */
 }
 
+header{
+  background-color: #0ad681;
+  text-align: left;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
+
+nav{
+  float: left;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  border-right: 1px solid white;
+}
+nav .bars{
+  width: 25px;
+  border-bottom: 3px solid white;
+  margin-top: 4px;
+}
+
+.logo{
+  width: 50px;
+  float: left;
+  margin-left: 10px;
+}
+
 #header {
   position: absolute;
   z-index: 2;
@@ -271,7 +300,7 @@ body {
   height: auto;
   line-height: 45px;
   --background: #2e2e2e;
-  background-color: #0288d1;  
+  background-color: #0ad681; 
   padding: 0;
   color: #eee;
   font-size: 20px;
