--- a/www/css/index.css
+++ b/www/css/index.css
@@ -51,6 +51,10 @@ body {
   margin-left: 10px;
 }
 
+.grey-cont{
+  background-color: #f5f5f5 !important;
+}
+
 @keyframes fade {
     from { opacity: 1.0; }
     50% { opacity: 0.4; }
@@ -710,4 +714,14 @@ nav .bars{
   margin: 0;
   margin-top: 10px;
   margin-right: 15px;
+}
+
+/* END SOLO TRAVEL */
+
+.user-dets-cont .rider-frame{
+  float: left;
+}
+.user-dets-cont .user-stat{
+  float: left;
+  margin-top: 10px;
 }
