--- a/www/css/index.css
+++ b/www/css/index.css
@@ -54,9 +54,14 @@ body {
 .grey-cont{
   background-color: #f5f5f5 !important;
 }
-
 .grey-button{
   background-color: #e5e5e5 !important;
+}
+
+.main-links:hover, .main-links:active, .main-links:focus {
+  background-color: black;
+  transition: ease 0.5s all;
+  color: white;
 }
 
 .fa-star{
@@ -468,11 +473,11 @@ nav .bars{
           font-size: 18px;
           color: black;
           font-weight: 300;
-          margin-left: 12px;
+          margin-left: 10%;
           padding: 20px;
           margin-top: 100px;
           text-overflow: ellipsis;
-          width: 300px;
+          width: 80%;
         }
 
         #pac-input:focus {
@@ -756,3 +761,4 @@ nav .bars{
   margin-top: 0px;
   margin-bottom: 5px;
 }
+
